# compression

./: .gitignore  CMakeLists.txt  TAGS  bit.c  bit_tst.c  bits.c  bitstream.c  bitstream_tst.c  dct.c  entier.c  entier_tst.c  image.c  info.txt  jpg.c  jpg.h  jpg_tst.c  matrice.c  out.txt  psycho.c  rle.c  rle_tst.c  sf.c  tests
